<resources>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="register">Register</string>
    <string name="my_wallet">My Wallet</string>
    <string name="please_enter_email">Please enter an email address</string>
    <string name="please_enter_password">Please enter a password</string>
    <string name="unknown_error">Unknown error, please try again later</string>
    <string name="no_account_register_here">No Account? Register here</string>
    <string name="login">Login</string>
    <string name="already_have_an_account_log_in_here">Already have an account? Log in here</string>
    <string name="register_description">After registering an account, you will receive your free %s.</string>
    <string name="action_refresh">Refresh</string>
    <string name="wallet_coin_balance">%s balance</string>
    <string name="account_copied">Address copied to clipboard</string>
    <string name="qr_code_description">The above QR code is for the following Ethereum address:</string>
    <string name="qr_code">QR Code</string>
    <string name="refreshing_balance">Refreshing balance</string>
    <string name="received">RECEIVED</string>

    <string name="sent">SENT</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="transfer_address">%1$s %2$s</string>
    <string name="block_number">BLOCK #%d</string>
    <string name="recipient_description">Recipient can be either an Ethereum address, or an AM Wallet user\'s email address.</string>
    <string name="recipient">Recipient</string>
    <string name="amount">Amount</string>
    <string name="send">send</string>
    <string name="send_wallet_coins">Send %s</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="scanner_description">Use the scanner to scan an Ethereum address QR code</string>
    <string name="camera_error">Camera error: %s</string>
    <string name="qr_not_address">QR code doesn\'t appear to be an Ethereum address</string>
    <string name="qr_not_valid">QR code is not a valid transaction</string>
    <string name="permission_camera_rationale">The camera is required for scanning QR codes</string>
    <string name="ok">OK</string>
    <string name="pending_transfer">Sending transfer…</string>
    <string name="transfer_failed">Transfer failed:</string>
    <string name="not_enough_balance">Not enough token balance. Try to send less, or refresh your wallet.</string>
    <string name="address_qr_code">Address QR code</string>
    <string name="wallet_address">Wallet Address</string>
    <string name="open_source_licenses">Open Source Licenses</string>
    <string name="transaction_scan">Transaction Scan</string>
    <string name="transaction_scan_description">Scan a transaction QR code</string>
    <string name="requesting_tx">%s is requesting the following transaction</string>
    <string name="requesting_tx_no_creator">Requesting the following transaction</string>
    <string name="requested_tx">Your transaction requested by %s has been sent.</string>
    <string name="requested_tx_no_creator">Your transaction has been sent.</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="submit_failed">Failed to submit transaction, try again later</string>
    <string name="transaction_details">Transaction Details</string>
    <string name="status">Status</string>
    <string name="transaction_needs_accepted">The transaction still needs to be confirmed on the network to be fully accepted.</string>
    <string name="transaction_sent">Transaction Sent</string>
    <string name="pending_confirmation">Pending confirmation...</string>
    <string name="confirmed">Confirmed</string>
    <string name="etherscan_link">Etherscan Link</string>
    <string name="waiting_for_link">Waiting for Etherscan link...</string>
    <string name="view_on_etherscan">View On Etherscan</string>
    <string name="sign_out">Sign Out</string>
    <string name="title_activity_trainer">TrainerActivity</string>
    <string name="action_settings">Settings</string>
    <string name="token_trainer">Token Trainer</string>
    <string name="pending_trainer">Setting up your Trainer Token...</string>
    <string name="trainer_failed">Failed to create Trainer Token:</string>
    <string name="trainer_token_balance">Trainer Token Balance</string>
    <string name="trainer_token_address">Trainer Token Address (tap to view on Etherscan)</string>
    <string name="open_token_trainer">Open Token Trainer</string>
    <string name="trainer_intro">This Token Trainer will create your own token and show you how you can make it your own. Select one of the Guided Options to get started.</string>

    <string name="token_minting">Token Minting</string>
    <string name="token_minting_description">Minting is a token feature that allows for creating more tokens, thereby increasing the total supply.</string>
    <string name="token_minting_description_2">To mint new tokens, minting must first be enabled. If you try to mint tokens without enabling it, the transaction will fail.</string>
    <string name="minting_is_currently">Minting is currently:</string>
    <string name="enable_minting">Enable Minting</string>
    <string name="mint_tokens">Mint Tokens</string>
    <string name="use_this_form_to_mint_tokens">Use this form to mint tokens.</string>
    <string name="recipient_wallet">Recipient Wallet</string>
    <string name="mint">Mint</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="enabling_minting">Enabling minting...</string>
    <string name="minting_enabled">Minting enabled.</string>
    <string name="minting_tokens">Minting tokens...</string>
    <string name="tokens_minted">Tokens minted.</string>
    <string name="contract_send_failed">Transaction failed</string>
    <string name="enter_valid_amount">Please enter a valid amount</string>
    <string name="next">NEXT</string>
    <string name="suggestion_num">Suggestion #%d</string>
    <string name="back">BACK</string>
    <string name="suggestions_list">Suggestions List</string>
    <string name="votes">VOTES</string>
    <string name="skip">SKIP</string>
    <string name="generated_fragments">Generated Fragments</string>
    <string name="argument">Argument</string>
    <string name="please_fill">Please fill in the following fields.</string>
    <string name="select_suggestion">Select suggestion to vote for</string>
    <string name="suggestion_id">Suggestion ID: %s</string>
    <string name="failed_to_create_qr">Failed to create a QR Code:</string>
    <string name="write_permission_explanation">Permission to write to external storage is required for sharing QR Codes. The image needs to be saved before it can be shared.</string>
    <string name="enter_value_in_form">Enter a value in the form</string>
    <string name="select_in_form">Select in the form above</string>
    <string name="select_what_to_vote">Select what you\'re voting for by tapping here</string>
    <string name="transaction_failed">Transaction failed:</string>
    <string name="error">Error</string>
    <string name="multiple_steps">This transaction has multiple steps which will be submitted in order.</string>
    <string name="transaction_preview">Transaction Preview</string>
    <string name="success">Success</string>
    <string name="action_trainer">Token Trainer</string>
    <string name="menu">Menu</string>
    <string name="display_wallet_qr">Display Wallet QR</string>
    <string name="view_on_etherscan_mainnet">View On Etherscan (Mainnet)</string>
    <string name="view_on_etherscan_rinkeby">View On Etherscan (Rinkeby)</string>
    <string name="change_contract">Change Contract</string>
    <string name="contract_address">Contract Address</string>
    <string name="invalid_address">That is not a valid Ethereum address, please try again.</string>
    <string name="proposal">Proposal</string>
    <string name="select_proposal">Select proposal to vote for</string>
    <string name="proposals">Proposals</string>
    <string name="votes_left">Votes Left</string>
    <string name="votes_refresh">Votes Refresh </string>
    <string name="send_ether">Send Ether</string>
    <string name="network_name">Network: %s</string>
    <string name="scan_qr_codes">Scan QR Codes</string>
    <string name="scan_qr_codes_description">Easily perform transactions on the blockchain by scanning QR Codes.</string>
    <string name="suggestions_viewer">Suggestions Viewer</string>
    <string name="suggestions_viewer_description">Use the menu to open the Suggestions Viewer to view suggestions and vote.</string>
</resources>
