<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_light"
    tools:context=".trainer.EnableMintingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/token_minting"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/token_minting_description" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/token_minting_description_2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minting_is_currently"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/minting_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                tools:text="Disabled" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/enable_progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="invisible" />

        <Button
            android:id="@+id/enable_minting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/enable_minting" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/mint_tokens"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/use_this_form_to_mint_tokens" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:helperText="This is the wallet the newly minted tokens will be added to. Your own wallet address is prefilled."
            app:helperTextTextAppearance="@style/HelperAppearance">

            <AutoCompleteTextView
                android:id="@+id/recipient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/recipient_wallet"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/value_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:helperText="The amount of tokens to mint."
            app:helperTextTextAppearance="@style/HelperAppearance">

            <AutoCompleteTextView
                android:id="@+id/value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/amount"
                android:imeActionLabel="@string/send"
                android:imeOptions="actionSend"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/mint"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/mint"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>