<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:animateLayoutChanges="true">

    <include layout="@layout/maintenance" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/maintenance"
        android:layout_alignWithParentIfMissing="true"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/toolbar"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/activity_horizontal_margin">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:text="@string/recipient_description" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/recipient"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/recipient"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/amount"
                        android:inputType="numberDecimal"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:imeActionLabel="@string/send"
                        android:imeOptions="actionSend" />

                </com.google.android.material.textfield.TextInputLayout>

                <ProgressBar
                    android:id="@+id/send_progress"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:indeterminate="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="invisible" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/send"
                    android:theme="@style/ButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/send" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>